# personal-ai-wiki

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_phase2_ingest.py  0003_phase4_chat.py  0004_phase5_backlink_index.py  0005_phase7_query_cache.py  0006_phase10_age.py
deploy/backup/: backup.sh  restore.sh
deploy/observability/: prometheus.yml
docker/postgres/: Dockerfile
docs/: README.ru.md  TODO.md
docs/reports/: hld-personal-ai-wiki.html  implementation-security-audit-2026-06-29.html  lld-personal-ai-wiki.html
docs/wiki/: api.md  architecture.md  audit.md  db.md  graph.md  harness.md  ingest.md  jobs.md  mcp.md  observability.md  ops.md  providers.md  security.md  services.md  storage.md  vector.md  web.md
src/paw/: config.py  main.py  worker.py
tests/: conftest.py  factories.py  stubs.py
tests/api/: test_admin_ui_pages.py  test_api_keys.py  test_article_meta_web.py  test_articles.py  test_auth.py  test_body_limit.py  test_chat_api.py  test_chat_web.py  test_csp.py  test_domains.py  test_graph_api.py  test_graph_rebuild_api.py  test_graph_web.py  test_graphrag_retrieve.py  test_jobs_api.py  test_jobs_sse.py  test_langfuse_settings.py  test_login_throttle.py  test_maintenance_api.py  test_maintenance_web.py  test_mcp_auth.py  test_metrics_auth.py  test_query_api.py  test_query_cache_api.py  test_query_cache_web.py  test_query_web.py  test_settings_provider.py  (+13 more)
(+335 files in other folders)
